test(hardening): cover the staging client and characterize config defaults
Test-only. No production code changed and no behavior changed for callers.

* sdk, 48% -> 61% mutation detection: the staging account client is now
  covered -- every pricing method's event-authority branches, staging
  token and fulfill routing, and state-client construction from a real
  mainnet-staging account including the legacy Drift ACL it carries,
  which must be skipped rather than rejected. Also kills the accounts
  builder, fixCPICallerRights and Jupiter wrap-condition survivors.

* services, 35% -> 36%: optional configuration sections now assert both
  directions -- each section parses when present, and the absent-case
  defaults are pinned: service backoff falls back to fibonacci, table
  cache to its documented defaults, sendRPC to the primary RPC load
  balancer, and notification hooks to a no-op client, while call
  weights stay unset. Adds a RequestQueue serialization round trip
  (generated code is excluded from mutation testing, so that layout is
  pinned by test) and asset metadata priority ordering, where a
  negative priority sorts behind every non-negative one.